src/Platform/Code/STE/MiddleWare/MiddleWare.h


typedef char*(__stdcall *pMessageSender)(char*, char*);



//  [5/22/2008 Eddy.Guo]
// Test function
MIDDLEWARE_API bool GetIMEI(TCHAR* szIMEI);

MIDDLEWARE_API bool GetMotoXPRSLogs(TCHAR* szLogPath);

MIDDLEWARE_API bool SetCallBack(pMessageSender pCallBack);

MIDDLEWARE_API bool Shutdown();

MIDDLEWARE_API bool ReadBootLoaderVersion(TCHAR* outputString);

MIDDLEWARE_API bool ReadESN(TCHAR* outputString);

MIDDLEWARE_API bool ReadMotoXPRSLogs(TCHAR* outputString);

MIDDLEWARE_API bool Vibrator(TCHAR* vibratoeOn, TCHAR* outputString);

MIDDLEWARE_API int Calibration(TCHAR* band, TCHAR* outputString, int nStartEnd);

MIDDLEWARE_API int CallTest(TCHAR* band, TCHAR* outputString, bool bNotOutput);


//  [5/31/2008 Eddy.Guo]
MIDDLEWARE_API bool OpenBackupRestoreDialog(HWND hWnd);

// 2008/08/14
MIDDLEWARE_API bool OpenMultiDownload(HWND hWnd);

//  [10/20/2008 Eddy.Guo]
MIDDLEWARE_API bool OpenRestoreBRTDialog(HWND hWnd);

//  [4/17/2009 Eddy.Guo]
MIDDLEWARE_API bool AddFailure(HWND hWnd);

MIDDLEWARE_API bool GSensorCalibration(HWND hWnd);