src/Platform/Code/RFCalibrationTool/RFCalibration.h


CALTEST_API BOOL RFCalibration(TCHAR *lpszCalItems);


CALTEST_API BOOL RFTest(TCHAR *lpszTestItems);


CALTEST_API BOOL RFCompletePhaseAndCallTest(TCHAR *lpszCalTestItems);