src/Platform/Code/STE/ODMSkeleton/DllWrapper.vb


    Private Declare Sub DllIMEIOTP Lib ".\Qisda\ServiceIMEIOTPTool.dll" Alias "ShowDlgServiceTool" ()
    Private Declare Sub DllSecurityTool Lib ".\Qisda\ServiceProgramTool.dll" Alias "ShowDlgServiceTool" ()
    Private Declare Sub DllQFuseTool Lib ".\Qisda\QFuseTool.dll" Alias "ShowDlgServiceTool" ()
    Private Declare Function DllBRDialog Lib ".\Qisda\BRDialog.dll" Alias "ShowDialog" () As Boolean
    Private Declare Function DllOpenBRDialog Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "OpenBackupRestoreDialog" (ByVal hWnd As Long) As Boolean
    Private Declare Function DllOpenMultidownload Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "OpenMultiDownload" (ByVal hWnd As Long) As Boolean
    Private Declare Function DllOpenRestoreBRTDialog Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "OpenRestoreBRTDialog" (ByVal hWnd As Long) As Boolean
    Private Declare Function DllAddFailure Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "AddFailure" (ByVal hWnd As Long) As Boolean
    Private Declare Function DllGSensorCalibration Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "GSensorCalibration" (ByVal hWnd As Long) As Boolean
    'Private Declare Function DllManualCITTest1 Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "ManualCITTest" (ByVal outputStrng() As Byte) As Boolean
    Private Declare Function DllManualCITTest Lib ".\Qisda\ManualCITTestTool.dll" Alias "ManualCITTest" (ByVal outputStrng() As Byte) As Boolean
    Private Declare Function DllCalibration Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "Calibration" (ByVal band() As Byte, ByVal outputString() As Byte, Byval StartEnd As Byte) As Integer
    Private Declare Function DllCallTest Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "CallTest" (ByVal band As String, ByVal outputString() As Byte, ByVal bOutput As Boolean) As Integer
    Private Declare Function DllRFCalibrationM Lib ".\Qisda\RFCalibrationTool_StaticM.dll" Alias "RFCalibration" (ByVal CalItems() As Byte) As Boolean
    Private Declare Function DllRFTestM Lib ".\Qisda\RFCalibrationTool_StaticM.dll" Alias "RFTest" (ByVal TestItems() As Byte) As Boolean
    Private Declare Function DllRFCompletePhaseAndCallTestM Lib ".\Qisda\RFCalibrationTool_StaticM.dll" Alias "RFCompletePhaseAndCallTest" (ByVal TestItems() As Byte) As Boolean

#End Region


    Public Function ManualCITTest(ByRef retString() As Byte) As Boolean
        Dim retVal As Boolean = False
        retVal = DllManualCITTest(retString)
        Return retVal
    End Function

    Public Function BRDialog() As Boolean
        Dim process As System.Diagnostics.Process
        process = System.Diagnostics.Process.GetCurrentProcess()
        Return DllOpenBRDialog(process.MainWindowHandle.ToInt64())
    End Function

    Public Function Multidownload() As Boolean
        Dim process As System.Diagnostics.Process
        process = System.Diagnostics.Process.GetCurrentProcess()
        Return DllOpenMultidownload(process.MainWindowHandle.ToInt64())
    End Function

    Public Function RestoreBRTDialog() As Boolean
        Dim process As System.Diagnostics.Process
        process = System.Diagnostics.Process.GetCurrentProcess()
        Return DllOpenRestoreBRTDialog(process.MainWindowHandle.ToInt64())
    End Function

    Public Function AddFailure() As Boolean
        Dim process As System.Diagnostics.Process
        process = System.Diagnostics.Process.GetCurrentProcess()
        Return DllAddFailure(process.MainWindowHandle.ToInt64())
    End Function
    Public Function CalibrateGSensor() As Boolean
        Dim process As System.Diagnostics.Process
        process = System.Diagnostics.Process.GetCurrentProcess()
        Return DllGSensorCalibration(process.MainWindowHandle.ToInt64())
    End Function

    Public Sub DlgSecurityTool()
        DllSecurityTool()
    End Sub

    Public Sub DlgIMEIOTP()
        DllIMEIOTP()
    End Sub
    Public Sub DlgQFuseTool()
        DllQFuseTool()
    End Sub

#Region "Test Function for The MiddleWare"

    'Declare all of the needed functions from the C++ dll.
    'These functions can now be used directly in the code.
    'Private Declare Function DllShutdown Lib ".\Qisda\QisdaService.dll" Alias "Shutdown" () As Boolean
    'Private Declare Function DllVibrator Lib ".\Qisda\QisdaService.dll" Alias "Vibrator" (ByVal turnOn As Boolean) As Boolean

    Private Declare Function DllGetIMEI Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "GetIMEI" (ByVal szIMEI() As Byte) As Boolean

    Public Function ReadIMEI() As String

        Dim szRes As String

        Dim bIMEI(20) As Byte

        If (DllGetIMEI(bIMEI)) Then
            szRes = "Success,," & System.Text.Encoding.ASCII.GetString(bIMEI)
        Else
            szRes = "Failure,,"
        End If

        Return szRes

    End Function

    Private Declare Function DllGetMotoXPRSLogs Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "GetMotoXPRSLogs" (ByVal szLogPath() As Byte) As Boolean

    Public Function ReadMotoXPRSLogs() As String

        Dim szRes As String

        Dim szLogPath(512) As Byte

        If (DllGetMotoXPRSLogs(szLogPath)) Then
            szRes = "Success,," + System.Text.Encoding.ASCII.GetString(szLogPath)
        Else
            szRes = "Failure,,"
        End If

        Return szRes

    End Function


    Private Declare Function DllReadBootLoaderVersion Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "ReadBootLoaderVersion" () As Integer

    Public Function ReadBootLoaderVersion(ByVal szBootLoaderVersion As String, ByVal nLength As Integer) As String
        If (DllReadBootLoaderVersion() = 1) Then
            Return "Success,,"
        Else
            Return "Failure,,"
        End If
    End Function

#End Region

    'Private variable to hold the callback delegate sent from the test engine.
    Private _callBackDelegate As CommandModule.CallBackDelegate = Nothing

    'Private variable to hold the dll callback to be sent to the dll.
    Private _dllCallBack As DllCallBack = AddressOf CallBackWrapper

    ''' <summary>
    ''' Creates a new dll wrapper using the C++ dll.
    ''' </summary>
    ''' <remarks></remarks>
    Public Sub New()
        'Link the dll back to this class by sending the dll callback function.
        DllSetCallBack(_dllCallBack)
    End Sub

    ''' <summary>
    ''' Sets the callback function from the engine.
    ''' </summary>
    ''' <param name="callBack">Callback function to be used for output.</param>
    ''' <remarks>This callback function provides communication back to the engine.</remarks>
    Public Sub SetCallBack(ByVal callBack As CommandModule.CallBackDelegate)

        'Set the private variable to the callback sent from the engine.
        _callBackDelegate = callBack

    End Sub

    ''' <summary>
    ''' Shuts down the dll.
    ''' </summary>
    ''' <returns>The success/fail code returned from the dll.</returns>
    ''' <remarks></remarks>
    Public Function Shutdown() As Boolean

        'Shut down the dll.
        Return True
        'Return DllShutdown()

    End Function

    ''' <summary>
    ''' Executes the call test on the dll.
    ''' </summary>
    ''' <returns>The success/fail code returned from the dll.</returns>
    ''' <remarks>The dll calls OutputResult during this test, using the callback function.</remarks>
    Public Function CallTest() As Boolean

        'Execute the command.
        Return True
        'Return DllRfTest()

    End Function

    ''' <summary>
    ''' Reads the ESN from the dll.
    ''' </summary>
    ''' <returns>The ESN.</returns>
    ''' <remarks></remarks>
    Public Function ReadESN() As String

        'Execute the command.
        Return ""
        'Return DllGetESN()

    End Function

    ''' <summary>
    ''' Accepts callbacks from the C++ dll.
    ''' </summary>
    ''' <param name="type">The type of callback being performed.</param>
    ''' <param name="data">The data of the callback.</param>
    ''' <returns>The value returned from the engine callback delegate.</returns>
    ''' <remarks></remarks>
    Private Function CallBackWrapper(ByVal type As String, ByVal data As String) As String

        'Make sure the engine callback has been set using SetCallback.
        If Not _callBackDelegate Is Nothing Then
            'Call the engine callback and return the result to the dll.
            Return _callBackDelegate(type, data)
        Else
            'Throw an exception, the engine callback function has not been set yet.
            Throw New NotSupportedException("Callback function is not supported")
        End If

    End Function

    ''' <summary>
    ''' Executes the LCD test on the dll.
    ''' </summary>
    ''' <returns>The success/fail code returned from the dll.</returns>
    ''' <remarks>The dll calls OutputResult during this test, using the callback function.</remarks>
    Public Function LCDTest() As Boolean

        'Execute the command.
        Return True
        'Return DllLCDTest()

    End Function

    ''' <summary>
    ''' Executes unlock keypad command on the dll.
    ''' </summary>
    ''' <returns>The success/fail code returned from the dll.</returns>
    ''' <remarks>The dll calls OutputResult during this test, using the callback function.</remarks>
    Public Function UnlockKeyPad() As Boolean

        'Execute the command.
        Return True
        'Return DllUnlockKeyPad()

    End Function

    ''' <summary>
    ''' Executes clear key buffer command on the dll.
    ''' </summary>
    ''' <returns>The success/fail code returned from the dll.</returns>
    ''' <remarks>The dll calls OutputResult during this test, using the callback function.</remarks>
    Public Function CleanScreenKeyBuffer() As Boolean

        'Execute the command.
        Return True
        'Return DllCleanScreenKeyBuffer()

    End Function

    ''' <summary>
    ''' Executes  enter LCD Test on the dll.
    ''' </summary>
    ''' <returns>The success/fail code returned from the dll.</returns>
    ''' <remarks>The dll calls OutputResult during this test, using the callback function.</remarks>
    Public Function EnterLCDTest() As Boolean

        'Execute the command.
        Return True
        'Return DllEnterLCDTest()

    End Function

    ''' <summary>
    ''' Executes  TestLCDNextPattern on the dll.
    ''' </summary>
    ''' <returns>The success/fail code returned from the dll.</returns>
    ''' <remarks>The dll calls OutputResult during this test, using the callback function.</remarks>
    Public Function TestLCDNextPattern() As Boolean

        'Execute the command.
        Return True
        'Return DllTestLCDNextPattern()

    End Function

    ''' <summary>
    ''' Executes  ReturnToHomeScreen on the dll.
    ''' </summary>
    ''' <returns>The success/fail code returned from the dll.</returns>
    ''' <remarks>The dll calls OutputResult during this test, using the callback function.</remarks>
    Public Function ReturnToHomeScreen() As Boolean

        'Execute the command.
        Return True
        'Return DllReturnToHomeScreen()

    End Function

    ''' <summary>
    ''' Executes  EnterEM on the dll.
    ''' </summary>
    ''' <returns>The success/fail code returned from the dll.</returns>
    ''' <remarks>The dll calls OutputResult during this test, using the callback function.</remarks>
    Public Function EnterEM() As Boolean

        'Execute the command.
        Return True
        'Return DllEnterEM()

    End Function
